mejora del index

--- a/ProyectoVentaProducto/web/src/main/webapp/resources/css/styles.css
+++ b/ProyectoVentaProducto/web/src/main/webapp/resources/css/styles.css
@@ -2,3 +2,11 @@
 
     font-size: 1.5rem;
 }
+
+.nav-link
+{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
