inicio de sesion y algunos filtros

--- a/ProyectoVentaProducto/web/src/main/webapp/resources/css/styles.css
+++ b/ProyectoVentaProducto/web/src/main/webapp/resources/css/styles.css
@@ -12,6 +12,12 @@
     margin-bottom: 10px;
 }
 
+#info-sesion{
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+}
+
 .p-grid {
     width: 100% !important;
     margin: 0 !important;
